# lab05

./: CMakeLists.txt  README.md  hello_world.cpp
.github/workflows/: CI.yml  CL.yml  linux.yml  windows.yml
_banking/: CMakeCache.txt  CTestTestfile.cmake  Makefile  check  cmake_install.cmake
_banking/Testing/Temporary/: CTestCostData.txt
_build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  check  cmake_install.cmake
_build/Testing/Temporary/: CTestCostData.txt
banking/: CMakeLists.txt
headers/: formatter_ex.h  solver.h
include/: print.hpp
sources/: print.cpp  solver.cpp
tests/: test_Account.cpp  test_Transaction.cpp
